--- a/newspaper.html
+++ b/newspaper.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doha Newspaper</title>
-    <link rel="stylesheet" href="style.css?v=1" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <button id="printBtn">Print</button>
-      <button id="downloadPdfBtn">Download PDF</button>
+      <button id="pdfBtn">PDF</button>
       <button id="logoutBtn" onclick="logout()">Logout</button>
 
 
@@ -107,8 +107,7 @@ Qatar is not just about its capital city Doha, and the way it’s held on to its
         </div>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="script.js"></script>
 <script>
   // Redirect to login if not logged in
