--- a/newspaper.html
+++ b/newspaper.html
@@ -34,8 +34,7 @@
             <img id="qnd-img" src="qatar-national-day.png"/>
           </div>
         </div>
-        <hr class="first-line">
-        <hr class="second-line">
+        <div class="double-line"></div>
 
         <div class="header-row">
           <span class="issue-info">NO. 30</span>
