--- a/newspaper.html
+++ b/newspaper.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -115,4 +115,4 @@ Qatar is not just about its capital city Doha, and the way it’s held on to its
   }
 </script>
   </body>
-</html>
+</html> -->
